# naimish-xyz

./: Cargo.toml  README.md
content/posts/: hello_world.md  what_are_tildes.md
content/posts/articles/: end-of-10.md  occams-razor.md  the-art-of-not-knowing.md  the_art_of_not_knowing.md
content/posts/blog/: hello-world.md
src/: main.rs
src/app/: client_type.rs  loader.rs  mod.rs  types.rs
src/routes/: articles.rs  blog.rs  contact.rs  home.rs  mod.rs
static/: style.css
templates/: base.html  contact.html  index.html  list.html  post.html
